# F429ZI_DISC1_TFT_LCD

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  F429ZI_DISC_test.ioc
App/Src/: MainTask.cpp
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  dma2d.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/STMPE811/: CMakeLists.txt
Drivers/STMPE811/Inc/: STMPE811.hpp
Drivers/STMPE811/Src/: STMPE811.cpp
cmake/stm32cubemx/: CMakeLists.txt
